yapılanlar dökümante edildi

--- a/Assets/_GameDEV/Scripts/documentation/playerController.html
+++ b/Assets/_GameDEV/Scripts/documentation/playerController.html
@@ -12,21 +12,38 @@
         <h1>🎮 PlayerController Script</h1>
         <p>Ana Karakter Kontrol Sistemi</p>
     </header>
-
     <nav>
         <ul class="nav-links">
             <li><a href="./documentation.html">🏠 Ana Sayfa</a></li>
-            <li><a href="./playerController.html">🎮 PlayerController</a></li>
-            <li><a href="./playerMovement.html">🏃 PlayerMovement</a></li>
-            <li><a href="./dashController.html">⚡ DashController</a></li>
-            <li><a href="./groundChecker.html">🌍 GroundChecker</a></li>
-            <li><a href="./shootingSystem.html">🏹 Atış Sistemi</a></li>
-            <li><a href="./inputSystem.html">⌨️ Giriş Sistemi</a></li>
-            <li><a href="./materialScroller.html">🎨 Material Scroller</a></li>
-            <li><a href="./interfaces.html">📋 Interfaces</a></li>
+            <li class="dropdown">
+                <a href="#">👤 Player Scripts</a>
+                <div class="dropdown-content">
+                    <a href="./playerMovement.html">🏃‍♂️ Player Movement</a>
+                    <a href="./dashController.html">⚡ Dash Controller</a>
+                    <a href="./groundChecker.html">🌍 Ground Checker</a>
+                    <a href="./shootingSystem.html">🎯 Shooting System</a>
+                    <a href="./projectile.html">💨 Projectile</a>
+                    <a href="./arrowProjectileStrategy.html">🏹 Arrow Strategy</a>
+                    <a href="./iPlayerInterfaces.html">🔗 Player Interfaces</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="#">👾 Enemy Scripts</a>
+                <div class="dropdown-content">
+                    <a href="./baseEnemy.html">👾 Base Enemy</a>
+                    <a href="./enemySpawner.html">🔄 Enemy Spawner</a>
+                    <a href="./enemyFactory.html">🏭 Enemy Factory</a>
+                    <a href="./enemyProjectile.html">🎯 Enemy Projectile</a>
+                    <a href="./meleeEnemy.html">⚔️ Melee Enemy</a>
+                    <a href="./rangedEnemy.html">🏹 Ranged Enemy</a>
+                    <a href="./meleeAttackStrategy.html">🗡️ Melee Strategy</a>
+                    <a href="./rangedAttackStrategy.html">🎯 Ranged Strategy</a>
+                    <a href="./iAttackStrategy.html">📋 Attack Strategy Interface</a>
+                    <a href="./iEnemy.html">📋 Enemy Interface</a>
+                </div>
+            </li>
         </ul>
     </nav>
-
     <main>
         <section class="script-section">
             <div class="script-header">
