--- a/Assets/_GameDEV/Scripts/documentation/Enemy/enemyProjectile.html
+++ b/Assets/_GameDEV/Scripts/documentation/Enemy/enemyProjectile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EnemyProjectile Script - Game Documentation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
@@ -35,12 +35,12 @@
                     <a href="./enemySpawner.html">🔄 Enemy Spawner</a>
                     <a href="./enemyFactory.html">🏭 Enemy Factory</a>
                     <a href="./enemyProjectile.html">🎯 Enemy Projectile</a>
-                    <a href="./meleeEnemy.html">⚔️ Melee Enemy</a>
-                    <a href="./rangedEnemy.html">🏹 Ranged Enemy</a>
-                    <a href="./meleeAttackStrategy.html">🗡️ Melee Strategy</a>
-                    <a href="./rangedAttackStrategy.html">🎯 Ranged Strategy</a>
-                    <a href="./iAttackStrategy.html">📋 Attack Strategy Interface</a>
-                    <a href="./iEnemy.html">📋 Enemy Interface</a>
+                    <a href="../Enemy/meleeEnemy.html">⚔️ Melee Enemy</a>
+                    <a href="../Enemy/rangedEnemy.html">🏹 Ranged Enemy</a>
+                    <a href="../ShootingSystem/meleeAttackStrategy.html">🗡️ Melee Strategy</a>
+                    <a href="../ShootingSystem/rangedAttackStrategy.html">🎯 Ranged Strategy</a>
+                    <a href="../interFaces/iAttackStrategy.html">📋 Attack Strategy Interface</a>
+                    <a href="../interFaces/iEnemy.html">📋 Enemy Interface</a>
                 </div>
             </li>
         </ul>
