--- a/Assets/_GameDEV/Scripts/documentation/ShootingSystem/projectile.html
+++ b/Assets/_GameDEV/Scripts/documentation/ShootingSystem/projectile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projectile Documentation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <style>
         .dropdown {
             position: relative;
@@ -70,32 +70,32 @@
 
     <nav>
         <ul class="nav-links">
-            <li><a href="./documentation.html">🏠 Ana Sayfa</a></li>
+            <li><a href="../index.html">🏠 Ana Sayfa</a></li>
             <li class="dropdown">
                 <a href="#">👤 Player Scripts</a>
                 <div class="dropdown-content">
-                    <a href="./playerMovement.html">🏃‍♂️ Player Movement</a>
-                    <a href="./dashController.html">⚡ Dash Controller</a>
-                    <a href="./groundChecker.html">🌍 Ground Checker</a>
-                    <a href="./shootingSystem.html">🎯 Shooting System</a>
-                    <a href="./projectile.html">💨 Projectile</a>
-                    <a href="./arrowProjectileStrategy.html">🏹 Arrow Strategy</a>
-                    <a href="./iPlayerInterfaces.html">🔗 Player Interfaces</a>
+                    <a href="../Player/playerMovement.html">🏃‍♂️ Player Movement</a>
+                    <a href="../Player/dashController.html">⚡ Dash Controller</a>
+                    <a href="../Player/groundChecker.html">🌍 Ground Checker</a>
+                    <a href="../ShootingSystem/shootingSystem.html">🎯 Shooting System</a>
+                    <a href="../ShootingSystem/projectile.html">💨 Projectile</a>
+                    <a href="../ShootingSystem/arrowProjectileStrategy.html">🏹 Arrow Strategy</a>
+                    <a href="../Interfaces/iPlayerInterfaces.html">🔗 Player Interfaces</a>
                 </div>
             </li>
             <li class="dropdown">
                 <a href="#">👾 Enemy Scripts</a>
                 <div class="dropdown-content">
-                    <a href="./baseEnemy.html">👾 Base Enemy</a>
-                    <a href="./enemySpawner.html">🔄 Enemy Spawner</a>
-                    <a href="./enemyFactory.html">🏭 Enemy Factory</a>
-                    <a href="./enemyProjectile.html">🎯 Enemy Projectile</a>
-                    <a href="./meleeEnemy.html">⚔️ Melee Enemy</a>
-                    <a href="./rangedEnemy.html">🏹 Ranged Enemy</a>
-                    <a href="./meleeAttackStrategy.html">🗡️ Melee Strategy</a>
-                    <a href="./rangedAttackStrategy.html">🎯 Ranged Strategy</a>
-                    <a href="./iAttackStrategy.html">📋 Attack Strategy Interface</a>
-                    <a href="./iEnemy.html">📋 Enemy Interface</a>
+                    <a href="../Enemy/baseEnemy.html">👾 Base Enemy</a>
+                    <a href="../Enemy/enemySpawner.html">🔄 Enemy Spawner</a>
+                    <a href="../Enemy/enemyFactory.html">🏭 Enemy Factory</a>
+                    <a href="../Enemy/enemyProjectile.html">🎯 Enemy Projectile</a>
+                    <a href="../Enemy/meleeEnemy.html">⚔️ Melee Enemy</a>
+                    <a href="../Enemy/rangedEnemy.html">🏹 Ranged Enemy</a>
+                    <a href="../ShootingSystem/meleeAttackStrategy.html">🗡️ Melee Strategy</a>
+                    <a href="../ShootingSystem/rangedAttackStrategy.html">🎯 Ranged Strategy</a>
+                    <a href="../interFaces/iAttackStrategy.html">📋 Attack Strategy Interface</a>
+                    <a href="../interFaces/iEnemy.html">📋 Enemy Interface</a>
                 </div>
             </li>
         </ul>
