--- a/Assets/_GameDEV/Scripts/documentation/interFaces/iAttackStrategy.html
+++ b/Assets/_GameDEV/Scripts/documentation/interFaces/iAttackStrategy.html
@@ -3,44 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IAttackStrategy Interface - Game Documentation</title>
+    <title>Attack Strategy Interface Documentation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <style>
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #2d2d2d;
+            min-width: 200px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+            border-radius: 5px;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .dropdown-content a {
+            color: #fff;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #3d3d3d;
+            border-radius: 5px;
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 20px;
+            padding: 0;
+            margin: 0;
+            list-style: none;
+        }
+
+        .nav-links > li {
+            position: relative;
+        }
+
+        .nav-links a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px;
+            display: block;
+        }
+
+        .nav-links > li > a {
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>📋 IAttackStrategy Interface</h1>
+        <h1>📋 Attack Strategy Interface</h1>
         <p>Saldırı Stratejisi Arayüzü</p>
     </header>
 
     <nav>
         <ul class="nav-links">
-            <li><a href="./documentation.html">🏠 Ana Sayfa</a></li>
+            <li><a href="../index.html">🏠 Ana Sayfa</a></li>
             <li class="dropdown">
                 <a href="#">👤 Player Scripts</a>
                 <div class="dropdown-content">
-                    <a href="./playerMovement.html">🏃‍♂️ Player Movement</a>
-                    <a href="./dashController.html">⚡ Dash Controller</a>
-                    <a href="./groundChecker.html">🌍 Ground Checker</a>
-                    <a href="./shootingSystem.html">🎯 Shooting System</a>
-                    <a href="./projectile.html">💨 Projectile</a>
-                    <a href="./arrowProjectileStrategy.html">🏹 Arrow Strategy</a>
-                    <a href="./iPlayerInterfaces.html">🔗 Player Interfaces</a>
+                    <a href="../Player/playerMovement.html">🏃‍♂️ Player Movement</a>
+                    <a href="../Player/dashController.html">⚡ Dash Controller</a>
+                    <a href="../Player/groundChecker.html">🌍 Ground Checker</a>
+                    <a href="../ShootingSystem/shootingSystem.html">🎯 Shooting System</a>
+                    <a href="../ShootingSystem/projectile.html">💨 Projectile</a>
+                    <a href="../ShootingSystem/arrowProjectileStrategy.html">🏹 Arrow Strategy</a>
+                    <a href="../interFaces/iPlayerInterfaces.html">🔗 Player Interfaces</a>
                 </div>
             </li>
             <li class="dropdown">
                 <a href="#">👾 Enemy Scripts</a>
                 <div class="dropdown-content">
-                    <a href="./baseEnemy.html">👾 Base Enemy</a>
-                    <a href="./enemySpawner.html">🔄 Enemy Spawner</a>
-                    <a href="./enemyFactory.html">🏭 Enemy Factory</a>
-                    <a href="./enemyProjectile.html">🎯 Enemy Projectile</a>
-                    <a href="./meleeEnemy.html">⚔️ Melee Enemy</a>
-                    <a href="./rangedEnemy.html">🏹 Ranged Enemy</a>
-                    <a href="./meleeAttackStrategy.html">🗡️ Melee Strategy</a>
-                    <a href="./rangedAttackStrategy.html">🎯 Ranged Strategy</a>
-                    <a href="./iAttackStrategy.html">📋 Attack Strategy Interface</a>
-                    <a href="./iEnemy.html">📋 Enemy Interface</a>
+                    <a href="../Enemy/baseEnemy.html">👾 Base Enemy</a>
+                    <a href="../Enemy/enemySpawner.html">🔄 Enemy Spawner</a>
+                    <a href="../Enemy/enemyFactory.html">🏭 Enemy Factory</a>
+                    <a href="../Enemy/enemyProjectile.html">🎯 Enemy Projectile</a>
+                    <a href="../Enemy/meleeEnemy.html">⚔️ Melee Enemy</a>
+                    <a href="../Enemy/rangedEnemy.html">🏹 Ranged Enemy</a>
+                    <a href="../ShootingSystem/meleeAttackStrategy.html">🗡️ Melee Strategy</a>
+                    <a href="../ShootingSystem/rangedAttackStrategy.html">🎯 Ranged Strategy</a>
+                    <a href="../interFaces/iAttackStrategy.html">📋 Attack Strategy Interface</a>
+                    <a href="../interFaces/iEnemy.html">📋 Enemy Interface</a>
                 </div>
             </li>
         </ul>
